--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 NEXT_PUBLIC_SANITY_PROJECT_ID=your_project_id
 NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_API_VERSION=2024-01-01
+
+# Quote form → email to contact@krisanputih.com (get key at https://resend.com)
+RESEND_API_KEY=re_xxxx
+RESEND_FROM=Krisan Putih <noreply@yourdomain.com>
