--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-sanity": "^9.2.0",
     "framer-motion": "^11.0.0",
     "@portabletext/react": "^3.0.0",
-    "sanity": "^3.23.0"
+    "sanity": "^3.23.0",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
