Add Instagram section and instagram-check API

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ NEXT_PUBLIC_SANITY_API_VERSION=2024-01-01
 # Quote form → email to contact@krisanputih.com (get key at https://resend.com)
 RESEND_API_KEY=re_xxxx
 RESEND_FROM=Krisan Putih <noreply@yourdomain.com>
+
+# Instagram feed on homepage (Graph API; requires Business/Creator account + Facebook Page)
+# See README for setup. Leave empty to hide the section.
+INSTAGRAM_ACCESS_TOKEN=
+INSTAGRAM_USER_ID=
