--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ NEXT_PUBLIC_SANITY_API_VERSION=2024-01-01
 # Quote form → email to contact@krisanputih.com (get key at https://resend.com)
 RESEND_API_KEY=re_xxxx
 RESEND_FROM=Krisan Putih <noreply@yourdomain.com>
+
+# Studio (CMS) access: only visitors who enter this password can open /studio. Set a strong secret.
+STUDIO_SECRET=your_strong_password_here
