--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ RESEND_FROM=Krisan Putih <noreply@yourdomain.com>
 
 # Studio (CMS) access: only visitors who enter this password can open /studio. Set a strong secret.
 STUDIO_SECRET=your_strong_password_here
+
+# Google Analytics 4 – Measurement ID from GA4 property (Admin → Data Streams → your stream)
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
