--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "sanity-deploy": "sanity deploy"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "@portabletext/react": "^3.0.0",
     "@sanity/client": "^6.22.0",
     "@sanity/image-url": "^1.0.2",
-    "next-sanity": "^9.2.0",
     "framer-motion": "^11.0.0",
-    "@portabletext/react": "^3.0.0",
-    "sanity": "^3.23.0",
-    "resend": "^4.0.0"
+    "lottie-react": "^2.4.1",
+    "next": "^14.2.0",
+    "next-sanity": "^9.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "resend": "^4.0.0",
+    "sanity": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
